@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Dec 27 17:47:37 2001 -->
+<!-- Thu Jan  3 13:38:14 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -419,6 +419,26 @@ add the following line to your .gnus file:<br>
 (setq sendmail-program "/path/to/tmda/bin/tmda-sendmail")
 
 </pre></blockquote>
+
+<li>For <a href="http://www.mhost.com/nmh/" TARGET="Resource Window">nmh</a>,
+<ul>
+<li>Make sure nmh was compiled to use Sendmail as its delivery agent
+    (i.e, "--with-mts=sendmail")<br>
+
+<li>Add the following line to your ~/.mh_profile:<br>
+<blockquote>
+<pre>
+postproc: /path/to/nmh/lib/spost
+
+</pre></blockquote>
+
+<li>Add the following line to your /path/to/nmh/etc/mts.conf:<br>
+<blockquote>
+<pre>
+sendmail: /path/to/tmda/bin/tmda-sendmail
+
+</pre></blockquote>
+</ul>
 
 <li>For <a href="http://sylpheed.good-day.net/" TARGET="Resource Window">Sylpheed</a>,
  Configuration --> Common Preferences --> Send --> External Program<br>
