@@ -1,3 +1,7 @@
+2002-01-03  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* config-client.ht: Add nmh configuration information.
+
 2001-12-31  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* bugs.ht: Add more detailed instructions on how to report bugs
